Fix border on 'quiet' repo names
The previously added 'truncate' was causing them to be trimmed by the
size of the overall box. We add padding in order to leave room for the
border.

We then trim the margin on these entries to compensate so that there
isn't too much whitespace.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -127,7 +127,7 @@ footer {
 }
 
 .quiet-entry {
-    @apply flex items-center my-4;
+    @apply flex items-center my-2;
 
     /* This is a hack as otherwise the content overflows the parent and I've
        not been able to figure out the correct solution
